Tests "public" pass