@@ -10,13 +10,13 @@ package org.jline.prompt;
 
 import java.io.ByteArrayInputStream;
 import java.io.IOException;
-import java.util.Arrays;
 import java.util.List;
 
 import org.jline.prompt.impl.DefaultPrompter;
 import org.jline.terminal.Terminal;
 import org.jline.terminal.TerminalBuilder;
 import org.jline.utils.AttributedString;
+import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
@@ -26,7 +26,7 @@ import static org.junit.jupiter.api.Assertions.*;
  * Unit tests for DefaultPrompter implementation.
  * Tests the core functionality including multi-column layouts, navigation, and display features.
  */
-public class DefaultPrompterTest {
+class DefaultPrompterTest {
 
     private Terminal terminal;
     private DefaultPrompter prompter;
@@ -41,13 +41,18 @@ public class DefaultPrompterTest {
         prompter = new DefaultPrompter(terminal);
     }
 
+    @AfterEach
+    void tearDown() throws IOException {
+        terminal.close();
+    }
+
     @Test
     void testPrompterCreation() {
         assertNotNull(prompter);
     }
 
     @Test
-    void testListPromptCreation() throws IOException {
+    void testListPromptCreation() {
         // Test creating a list prompt with items
         Prompter factory = PrompterFactory.create(terminal);
         PromptBuilder builder = factory.newBuilder();
@@ -70,7 +75,7 @@ public class DefaultPrompterTest {
         assertEquals(1, prompts.size());
 
         Prompt prompt = prompts.get(0);
-        assertTrue(prompt instanceof ListPrompt);
+        assertInstanceOf(ListPrompt.class, prompt);
         assertEquals("test-list", prompt.getName());
         assertEquals("Choose an option:", prompt.getMessage());
 
@@ -79,7 +84,7 @@ public class DefaultPrompterTest {
     }
 
     @Test
-    void testCheckboxPromptCreation() throws IOException {
+    void testCheckboxPromptCreation() {
         // Test creating a checkbox prompt with pre-checked items
         Prompter factory = PrompterFactory.create(terminal);
         PromptBuilder builder = factory.newBuilder();
@@ -104,7 +109,7 @@ public class DefaultPrompterTest {
         assertEquals(1, prompts.size());
 
         Prompt prompt = prompts.get(0);
-        assertTrue(prompt instanceof CheckboxPrompt);
+        assertInstanceOf(CheckboxPrompt.class, prompt);
         assertEquals("test-checkbox", prompt.getName());
 
         CheckboxPrompt checkboxPrompt = (CheckboxPrompt) prompt;
@@ -118,7 +123,7 @@ public class DefaultPrompterTest {
     }
 
     @Test
-    void testChoicePromptCreation() throws IOException {
+    void testChoicePromptCreation() {
         // Test creating a choice prompt with keys
         Prompter factory = PrompterFactory.create(terminal);
         PromptBuilder builder = factory.newBuilder();
@@ -145,7 +150,7 @@ public class DefaultPrompterTest {
         assertEquals(1, prompts.size());
 
         Prompt prompt = prompts.get(0);
-        assertTrue(prompt instanceof ChoicePrompt);
+        assertInstanceOf(ChoicePrompt.class, prompt);
 
         ChoicePrompt choicePrompt = (ChoicePrompt) prompt;
         List<ChoiceItem> items = choicePrompt.getItems();
@@ -161,7 +166,7 @@ public class DefaultPrompterTest {
     }
 
     @Test
-    void testInputPromptCreation() throws IOException {
+    void testInputPromptCreation() {
         // Test creating an input prompt with default value
         Prompter factory = PrompterFactory.create(terminal);
         PromptBuilder builder = factory.newBuilder();
@@ -176,13 +181,13 @@ public class DefaultPrompterTest {
         assertEquals(1, prompts.size());
 
         Prompt prompt = prompts.get(0);
-        assertTrue(prompt instanceof InputPrompt);
+        assertInstanceOf(InputPrompt.class, prompt);
         assertEquals("test-input", prompt.getName());
         assertEquals("Enter your name:", prompt.getMessage());
     }
 
     @Test
-    void testConfirmPromptCreation() throws IOException {
+    void testConfirmPromptCreation() {
         // Test creating a confirm prompt with default value
         Prompter factory = PrompterFactory.create(terminal);
         PromptBuilder builder = factory.newBuilder();
@@ -197,13 +202,13 @@ public class DefaultPrompterTest {
         assertEquals(1, prompts.size());
 
         Prompt prompt = prompts.get(0);
-        assertTrue(prompt instanceof ConfirmPrompt);
+        assertInstanceOf(ConfirmPrompt.class, prompt);
         assertEquals("test-confirm", prompt.getName());
         assertEquals("Are you sure?", prompt.getMessage());
     }
 
     @Test
-    void testMultiplePromptsInBuilder() throws IOException {
+    void testMultiplePromptsInBuilder() {
         // Test creating multiple prompts in a single builder
         Prompter factory = PrompterFactory.create(terminal);
         PromptBuilder builder = factory.newBuilder();
@@ -228,16 +233,17 @@ public class DefaultPrompterTest {
         List<Prompt> prompts = builder.build();
         assertEquals(3, prompts.size());
 
-        assertTrue(prompts.get(0) instanceof ListPrompt);
-        assertTrue(prompts.get(1) instanceof ConfirmPrompt);
-        assertTrue(prompts.get(2) instanceof InputPrompt);
+        assertInstanceOf(ListPrompt.class, prompts.get(0));
+        assertInstanceOf(ConfirmPrompt.class, prompts.get(1));
+        assertInstanceOf(InputPrompt.class, prompts.get(2));
     }
 
+    // TODO: What does this test, the functionality of lists?
     @Test
-    void testEmptyPromptList() throws IOException {
+    void testEmptyPromptList() {
         // Test behavior with empty prompt list
-        List<AttributedString> header = Arrays.asList(new AttributedString("Test Header"));
-        List<Prompt> emptyPrompts = Arrays.asList();
+        List<AttributedString> header = List.of(new AttributedString("Test Header"));
+        List<Prompt> emptyPrompts = List.of();
 
         // Should handle empty prompt list gracefully - just test that it doesn't throw
         // Note: We don't actually call prompt() as it would wait for user input
@@ -246,7 +252,7 @@ public class DefaultPrompterTest {
     }
 
     @Test
-    void testNullHeaderHandling() throws IOException {
+    void testNullHeaderHandling() {
         // Test behavior with null header - just test prompt creation
         Prompter factory = PrompterFactory.create(terminal);
         PromptBuilder builder = factory.newBuilder();
